--- a/frontend/src/components/LatestNews.css
+++ b/frontend/src/components/LatestNews.css
@@ -6,3 +6,40 @@
 .slick-next:before, .slick-prev::before{
   display: none;
 }
+
+.latestnews .slick-track{
+  min-width: 100%;
+}
+.slick-track{
+  margin: 10px 0;
+}
+
+.category-title{
+  color:#fff;
+  font-size: 24px;
+  font-weight: 500;
+}
+
+
+.cardAll {
+
+
+
+  .card_overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(4, 92, 4, 0.774);
+    transition: 0.3s ease-in-out;
+  }
+
+
+  &:hover   .card_overlay{
+   height: 100%;
+  }
+}
