--- a/frontend/src/components/AwardComponent.css
+++ b/frontend/src/components/AwardComponent.css
@@ -1,17 +1,17 @@
-.body {
+/* .body { */
   /* background: #fff; */
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  /* font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 14px;
   color: #000;
   margin: 0;
   padding: 0;
   position: relative;
   height: 100%;
-}
+} */
 
 .swiper {
-  width: 450px;
-  height: 500px;
+  width: 650px;
+  height: 400px;
 }
 
 .swiper-slide {
@@ -29,4 +29,16 @@
     width: 300px;
     height: 300px;
   }
+}
+.awards-swiper {
+  padding-bottom: 50px;
+}
+
+.award-slide {
+  transform: perspective(800px) rotateX(10deg);
+  transition: transform 0.5s ease-in-out;
+}
+
+.award-slide:hover {
+  transform: perspective(800px) rotateX(5deg) scale(1.05);
 }
