--- a/frontend/src/components/AwardComponent.css
+++ b/frontend/src/components/AwardComponent.css
@@ -1,44 +1,49 @@
-/* .body { */
-  /* background: #fff; */
-  /* font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  color: #000;
-  margin: 0;
-  padding: 0;
+.awards-swiper {
+  width: 100%;
+  height: 500px;
   position: relative;
-  height: 100%;
-} */
+  overflow: hidden; 
+}
 
-.swiper {
-  width: 650px;
-  height: 400px;
+
+.award-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: transform 0.3s ease-in-out;
+  height: 100%;
+}
+
+.award-slide img {  
+  width: 100%;
+  height: 100%; 
+  object-fit: cover;
+  transition: transform 0.5s, box-shadow 0.5s;
+  transform: scale(0.7);
+}
+
+.award-slide:hover img {
+  transform: scale(1.1);
+  box-shadow: 0px 15px 30px rgba(33, 31, 31, 0.3);
 }
 
 .swiper-slide {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 18px;
-  font-size: 22px;
-  font-weight: bold;
-  color: #fff;
+  width: auto;
+  max-width: 500px;
 }
 
-@media screen and (max-width: 500px){
-  .awards-swiper{
-    width: 300px;
+.swiper-wrapper {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+@media (max-width: 768px) {
+  .panorama-3d-swiper {
     height: 300px;
   }
-}
-.awards-swiper {
-  padding-bottom: 50px;
-}
 
-.award-slide {
-  transform: perspective(800px) rotateX(10deg);
-  transition: transform 0.5s ease-in-out;
-}
-
-.award-slide:hover {
-  transform: perspective(800px) rotateX(5deg) scale(1.05);
+  .swiper-slide img {
+    width: 80%;
+    height: auto;
+  }
 }
