--- a/frontend/src/components/AwardComponent.css
+++ b/frontend/src/components/AwardComponent.css
@@ -2,9 +2,9 @@
 .main {
   position: relative;
   width: 100%;
-  height: 50vh;
+  height: 60vh;
   overflow: hidden;
-  background-color: #0e1d34;
+  background-color: #c0c6d7;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -18,22 +18,22 @@
   content: "";
   position: absolute;
   left: 50%;
-  width: 120%;
-  height: 250px; /* Adjust for better curve */
-  background-color: #737fa1;
+  width: 151%;
+  height: 180px; /* Adjust for better curve */
+  background-color: #c0c6d7;
   border-radius: 50%;
   transform: translateX(-50%);
 }
 
 /* Top Curve (Push Downwards) */
 .main::before {
-  top: -200px;
+  top: -100px;
   box-shadow: 0px -10px 20px rgba(0, 0, 0, 0.2); /* Shadow for depth */
 }
 
 /* Bottom Curve (Push Upwards) */
 .main::after {
-  bottom: -170px;
+  bottom: -100px;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
 }
 
@@ -49,14 +49,14 @@
 }
 
 .inner{
-  flex: 0 0 33%;
+  flex: 0 0 38%;
   width: 33%;
 }
 
 .slide{
   width: 100%;
   height: 100%;
-  border: 10px solid #060606;
+  border: 10px solid #c0c6d7;
   scroll-snap-align: center;
 }
 
@@ -82,3 +82,51 @@
     height: 180px;
   }
 }
+
+.main {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* .outer {
+  display: flex;
+  overflow-x: auto;
+  scroll-behavior: smooth;
+  white-space: nowrap;
+  max-width: 80%;
+  padding: 10px;
+} */
+
+.slide img {
+  width: 1400px;
+  height: auto;
+  border-radius: auto;
+}
+
+.button-container {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.scroll-btn {
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
+  border: none;
+  padding: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+.left-arrow {
+  left: 10px;
+}
+
+.right-arrow {
+  right: 10px;
+}
+
+
